hphp/hack/test/typecheck/array_foreach.php.exp
File "array_foreach.php", line 16, characters 3-16:
a varray_or_darray does not allow array append (Typing[4006])
File "array_foreach.php", line 12, characters 15-19:
Definition is here
